--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,13 +1,13 @@
-{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static  'global/css/style.css' %}">
-    <title>Qualquer coisa</title>
+  {% include 'global/partials/_head.html' %}
 </head>
 <body>
-    <h1>Qualquer coisa</h1>
+  {% include 'global/partials/_header.html' %}
+
+  <main class="content">
+    {% block content %}{% endblock content %}
+  </main>
 </body>
 </html>
