--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -5,6 +5,11 @@
 </head>
 <body>
   {% include 'global/partials/_header.html' %}
+  {% include 'global/partials/_messages.html' %}
+
+  
+
+    
 
   <main class="content">
     {% block content %}{% endblock content %}
